// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message page render should render the initial state of the page 1`] = `
<base-page>
  <template
    slot="title"
  >
    Message
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class=""
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message
    v-show="isSignTabActive"
  />
   
  <verify-message
    style="display: none;"
    v-show="isVerifyTabActive"
  />
</base-page>
`;

exports[`Message page render should set Sign tab 1`] = `
<base-page>
  <template
    slot="title"
  >
    Message
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class="is-active"
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class=""
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message
    v-show="isSignTabActive"
  />
   
  <verify-message
    style="display: none;"
    v-show="isVerifyTabActive"
  />
</base-page>
`;

exports[`Message page render should set Verify tab 1`] = `
<base-page>
  <template
    slot="title"
  >
    Message
  </template>
   
  <div
    class="tabs"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Sign
        </a>
      </li>
       
      <li
        class="is-active"
      >
        <a>
          Verify
        </a>
      </li>
    </ul>
  </div>
   
  <sign-message
    style="display: none;"
    v-show="isSignTabActive"
  />
   
  <verify-message
    style=""
    v-show="isVerifyTabActive"
  />
</base-page>
`;
